--- a/app/src/main/res/layout/activity_cryp_et_decrypt.xml
+++ b/app/src/main/res/layout/activity_cryp_et_decrypt.xml
@@ -130,10 +130,10 @@
 
     <Button
         android:id="@+id/clearBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="48dp"
-        android:text="Button"
+android:background="@drawable/clear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
