--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#ECF4D6"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".OnBordingScreen">
 
     <Button
         android:id="@+id/skipButton"
@@ -35,6 +35,8 @@
         android:layout_marginBottom="24dp"
         android:background="#00000000"
         android:text="Back"
+        android:visibility="gone"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/indicator_layout"
         app:layout_constraintHorizontal_bias="0.126"
@@ -47,6 +49,7 @@
         android:layout_marginStart="108dp"
         android:background="#00000000"
         android:text="Next"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/indicator_layout"
         app:layout_constraintTop_toBottomOf="@+id/slideViewPager" />
